@@ -58,12 +58,13 @@ typedef struct
 extern const GOptionEntry options[];
 extern TotemCmdLineOptions optionstate;
 
+void totem_options_register_remote_commands (Totem *totem);
 void totem_options_process_early (Totem *totem,
-	const TotemCmdLineOptions* options);
+				  const TotemCmdLineOptions* options);
 void totem_options_process_late (Totem *totem, 
-	const TotemCmdLineOptions* options);
+				 const TotemCmdLineOptions* options);
 void totem_options_process_for_server (UniqueApp *app,
-	const TotemCmdLineOptions* options);
+				       const TotemCmdLineOptions* options);
 
 G_END_DECLS
 
